--- a/STM32F411CEU6_robot_datalogger/STM32F411CEU6_robot_datalogger.ioc
+++ b/STM32F411CEU6_robot_datalogger/STM32F411CEU6_robot_datalogger.ioc
@@ -2,8 +2,9 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-FATFS.IPParameters=_USE_LFN
-FATFS._USE_LFN=0
+FATFS.IPParameters=_FS_REENTRANT,_USE_LFN
+FATFS._FS_REENTRANT=0
+FATFS._USE_LFN=1
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
@@ -78,9 +79,9 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PC14-OSC32_IN.Mode=LSE-External-Clock-Source
+PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
-PC15-OSC32_OUT.Mode=LSE-External-Clock-Source
+PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
@@ -119,41 +120,39 @@ ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_FATFS_Init-FATFS-false-HAL-false,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
 RCC.48MHZClocksFreq_Value=48000000
-RCC.AHBFreq_Value=96000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=48000000
-RCC.APB1TimFreq_Value=96000000
-RCC.APB2Freq_Value=96000000
-RCC.APB2TimFreq_Value=96000000
-RCC.CortexFreq_Value=96000000
-RCC.EthernetFreq_Value=96000000
-RCC.FCLKCortexFreq_Value=96000000
+RCC.AHBFreq_Value=16000000
+RCC.APB1Freq_Value=16000000
+RCC.APB2Freq_Value=16000000
+RCC.CortexFreq_Value=16000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=96000000
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=150000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,PLLCLKFreq_Value,PLLM,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1Freq_Value,APB2Freq_Value,CortexFreq_Value,FamilyName,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PWR_Regulator_Voltage_Scale,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
-RCC.PLLCLKFreq_Value=96000000
-RCC.PLLM=25
+RCC.PLLCLKFreq_Value=120000000
+RCC.PLLM=15
+RCC.PLLN=144
+RCC.PLLQ=5
 RCC.PLLQCLKFreq_Value=48000000
+RCC.PWR_Regulator_Voltage_Scale=PWR_REGULATOR_VOLTAGE_SCALE2
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=12500000
-RCC.SYSCLKFreq_VALUE=96000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.SYSCLKFreq_VALUE=16000000
 RCC.VCOI2SOutputFreq_Value=300000000
-RCC.VCOInputFreq_Value=1000000
+RCC.VCOInputFreq_Value=1666666.6666666667
 RCC.VCOInputMFreq_Value=1562500
-RCC.VCOOutputFreq_Value=192000000
+RCC.VCOOutputFreq_Value=240000000
 RCC.VcooutputI2S=150000000
-SPI1.CalculateBaudRate=48.0 MBits/s
+SPI1.CalculateBaudRate=8.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+USB_DEVICE.APP_RX_DATA_SIZE=1024
+USB_DEVICE.APP_TX_DATA_SIZE=1024
 USB_DEVICE.CLASS_NAME_FS=CDC
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,APP_RX_DATA_SIZE,APP_TX_DATA_SIZE
 USB_DEVICE.VirtualMode=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
 USB_OTG_FS.IPParameters=VirtualMode
